feat: Implement Docker containerization

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-src/main/resources/application.properties
+# src/main/resources/application.properties
 
 
 ### STS ###
@@ -38,3 +38,6 @@ build/
 
 ### Other ###
 *.log
+
+### Local Env ###
+.env
