chore: Configure twilio-sms-service to use the free plan on Render.

--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: twilio-sms-service
     runtime: docker
+    plan: free
     envVars:
       - key: TWILIO_ACCOUNT_SID
         sync: false
